utilities/Sol/modules/grammars/ide/src/test/resources/cocos/valid/ExcludeNeeded.ide
package valid

ide ExcludeNeeded {
    registry "some/registry"
    build "some/build/folder" resolved from CWD

    include module type ExcludeNeededModule
}
