utilities/Sol/modules/grammars/ide/src/test/resources/cocos/invalid/ExcludeNeeded.ide
package invalid

ide ExcludeNeeded {
    registry "some/registry"
    build "some/build/folder" resolved from CWD

    include module type ExcludeNeededModule

    exclude configuration type ExcludeNeededConfiguration
}
